Added units property to cephalometric measurement. Added Clear method to CommandExecutor. Added anti-aliasing and solved printing functionality. New viewport manipulation functions. Unsaved changes warning dialog.

--- a/OpenOrtho/OpenOrtho.csproj
+++ b/OpenOrtho/OpenOrtho.csproj
@@ -70,6 +70,9 @@
     <Compile Include="Analysis\CephalometricMeasurementCollection.cs" />
     <Compile Include="Analysis\CephalometricPoint.cs" />
     <Compile Include="Analysis\CephalometricPointCollection.cs" />
+    <Compile Include="AntiAliasedGLControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="CommandExecutor.cs">
       <SubType>Component</SubType>
     </Compile>
