Added NormalLineProjectedDistanceMeasurement for 6-PTV measurement. Added status variable to avoid text artifact in off-screen rendering.

--- a/OpenOrtho/OpenOrtho.csproj
+++ b/OpenOrtho/OpenOrtho.csproj
@@ -64,6 +64,7 @@
     </Compile>
     <Compile Include="Analysis\CephalometricAnalysis.cs" />
     <Compile Include="Analysis\AngleMeasurement.cs" />
+    <Compile Include="Analysis\NormalLineProjectedDistanceMeasurement.cs" />
     <Compile Include="Analysis\DistanceMeasurement.cs" />
     <Compile Include="Analysis\LineDistanceMeasurement.cs" />
     <Compile Include="Analysis\CephalometricMeasurement.cs" />
