Added application and document icons. Added ClickOnce file associations. Changed application startup to use ClickOnce activation data if available.

--- a/OpenOrtho/OpenOrtho.csproj
+++ b/OpenOrtho/OpenOrtho.csproj
@@ -25,6 +25,8 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <ProductName>OpenOrtho</ProductName>
+    <PublisherName>OpenOrtho</PublisherName>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
@@ -61,6 +63,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>true</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\OpenOrtho.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenTK, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL" />
@@ -179,6 +184,20 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\OpenOrtho.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\OpenOrthoDocument.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <FileAssociation Include=".ortho">
+      <Visible>False</Visible>
+      <Description>OpenOrtho Analysis</Description>
+      <Progid>OpenOrtho.Analysis</Progid>
+      <DefaultIcon>Resources\OpenOrthoDocument.ico</DefaultIcon>
+    </FileAssociation>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
